Feature/attendance (#190)
* implement student absence management with CRUD operations and add related features

* implement student absence management with CRUD operations and add related features

* implement hard delete functionality for student absences in cascade delete operations

---------

Co-authored-by: Manuel Farrapeira Pérez <manuelfpere@ext.inditex.com>